# patch_random

./: CMakeLists.txt  README.md
include/patch_random/: patch_random.hpp
src/: patch_random.cpp
tests/: CMakeLists.txt  compare_output.py  test_rand.c  test_rand.cpp
